# IJC

./: CMakeLists.txt  CODEOWNERS  README.md  bit_set.h
Project1/: CMakeLists.txt  Eratosthenes.c  Eratosthenes.h  Makefile  bit_set.c  bit_set.h  bitset.c  bitset.h  error.c  error.h  ppm.c  ppm.h  primes.c  steg-decode.c
Project2/: Makefile  hash_function.c  htab.h  htab_bucket_count.c  htab_clear.c  htab_erase.c  htab_find.c  htab_for_each.c  htab_free.c  htab_hash_function.c  htab_init.c  htab_lookup_add.c  htab_private.c  htab_private.h  htab_resize.c  htab_size.c  io.c  io.h  main.c  tail.c  wordcount.c
